@@ -60,3 +60,5 @@ LHMP.RaceClassCombinations = {
 }
 
 LHMP.HeroClasses = {6,12,13}
+
+LHMP.PlayerChoices = {[234] = 1}
